Update title for GLOPIA organization

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GLOPIA - Great Lakes Peace Initiative Africa</title>
+    <title>GLOPIA - Great Lakes Organisation & Peace Initiative Africa </title>
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
